--- a/DSN_Staff_Promotion.ipynb
+++ b/DSN_Staff_Promotion.ipynb
@@ -5003,7 +5003,7 @@
     "id": "7FedpZ1fkVwl"
    },
    "source": [
-    "### XGBoost Training and Optimization"
+    "### LightGBM Training and Optimization"
    ]
   },
   {
